# raggy-notes

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  docker-compose.yaml  flake.nix
docker/: ollama-entrypoint.sh
src/: error.rs  main.rs  prelude.rs
src/config/: app_config.rs  mod.rs
src/llama/: mod.rs
src/rag/: files.rs  mod.rs  vectors.rs
src/tui/: mod.rs
