[package]
name = "raggy-notes"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.26"
ollama-rs = "0.3.0"
qdrant-client = "1.13.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4"] }
xdg = { version = "2.5.2", features = ["serde"] }
ratatui = "0.26.0"
crossterm = "0.27.0"
thiserror = "2.0.0"
chrono = { version = "0.4.35", features = ["serde"] }
directories = "5.0.1"

[dev-dependencies]
tempdir = "0.3.7"
