[package]
name = "raggy-notes"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
ollama-rs = "0.3.0"
qdrant-client = "1.13.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.44.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
xdg = { version = "2.5.2", features = ["serde"] }
ratatui = "0.29.0"
crossterm = "0.28.1"
thiserror = "2.0.12"
chrono = { version = "0.4.40", features = ["serde"] }
directories = "6.0.0"

[dev-dependencies]
tempdir = "0.3.7"
